Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,18 +1,16 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5776213209:AAEAHEbfYuAZkPAnX-WLDu1uAe5_5gzSVbc"                              # Require restart after changing it while bot running
+OWNER_ID = "5394341607"                               # Require restart after changing it while bot running
+TELEGRAM_API = "12619736"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "5460dc0eff75d7b7665174a1adb2b013"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
 DOWNLOAD_DIR = "/usr/src/app/downloads/"    # Require restart after changing it while bot running
 CMD_SUFFIX = ""                             # Require restart after changing it while bot running
-AUTHORIZED_CHATS = ""                       # Require restart after changing it while bot running
+AUTHORIZED_CHATS = "-1001596636711"                       # Require restart after changing it while bot running
 SUDO_USERS = ""                             # Require restart after changing it while bot running
-STATUS_LIMIT = "8"
+STATUS_LIMIT = "4"
 DEFAULT_UPLOAD = "gd"
 STATUS_UPDATE_INTERVAL = "10"
 AUTO_DELETE_MESSAGE_DURATION = "30"
@@ -21,11 +19,11 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = "False"
 YT_DLP_QUALITY = ""
 # GDrirve Tools
-GDRIVE_ID = ""
-IS_TEAM_DRIVE = "False"
-USE_SERVICE_ACCOUNTS = "False"
-STOP_DUPLICATE = "False"
-INDEX_URL = ""
+GDRIVE_ID = "1upS_FZZiaL2u2x4-XMZZ5zh0bnGVFV1C"
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
+STOP_DUPLICATE = "True"
+INDEX_URL = "https://cloud.bawera.my.id/1:"
 # Rclone
 RCLONE_PATH = ""
 RCLONE_FLAGS = ""
@@ -34,17 +32,17 @@ RCLONE_SERVE_PORT = ""
 RCLONE_SERVE_USER = ""
 RCLONE_SERVE_PASS = ""
 # Update
-UPSTREAM_REPO = ""
-UPSTREAM_BRANCH = ""
+UPSTREAM_REPO = "https://github.com/sonhak-18/jmdkh-mltb-Rclone_upstreambase-r2"
+UPSTREAM_BRANCH = "master"
 # Leech
 LEECH_SPLIT_SIZE = ""
 AS_DOCUMENT = "False"
 EQUAL_SPLITS = "False"
 MEDIA_GROUP = "False"
 LEECH_FILENAME_PREFIX = ""
-DUMP_CHAT = ""
+DUMP_CHAT = "-1001596636711"
 # qBittorrent/Aria2c
-TORRENT_TIMEOUT = ""
+TORRENT_TIMEOUT = "180"
 BASE_URL = ""
 BASE_URL_PORT = ""
 WEB_PINCODE = "False"
@@ -56,8 +54,8 @@ QUEUE_UPLOAD = ""
 RSS_DELAY = "900"
 RSS_CHAT_ID = ""
 # Mega
-MEGA_EMAIL = ""
-MEGA_PASSWORD = ""
+MEGA_EMAIL = "pipyona18@gmail.com"
+MEGA_PASSWORD = "pip180803!"
 # Buttons
 VIEW_LINK = "False"
 # Torrent Search
@@ -89,8 +87,8 @@ TORRENT_LIMIT = ""
 DIRECT_LIMIT = ""
 YTDLP_LIMIT = ""
 GDRIVE_LIMIT = ""
-MEGA_LIMIT = ""
-LEECH_LIMIT = ""
+MEGA_LIMIT = "2"
+LEECH_LIMIT = "2"
 CLONE_LIMIT = ""
 
 #Group Features
